# content-video-generator

./: .cursorrules  .env.example  .gitignore  README.md  README_TESTES.md  env.example  main.py  pyproject.toml  test_etapa5_pdf.py  test_template.py  verificar_sistema.py
doc/: prd.md
prompts/: __init__.py  system_prompt_ebook.py  user_prompt_ebook.py
template/: README.md  ebook.css  ebook.html  ebook_content_example.json
tests/: test_all_etapas.py  test_debug_json.py  test_etapa1_download.py  test_etapa2_transcricao.py  test_etapa3_processamento_gpt.py  test_etapa4_template.py  test_setup.py  test_template_simulado.py
